--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -730,7 +730,7 @@
   "moment.duration.years": "%s a",
   "Unknown user": "Utilisateur inconnu",
   "European server": "Serveur européen",
-  "API creation security": "Sécurité de création d'API",
+  "API creation security": "Sécurité - création d'API",
   "creation.security.help": "si activé, seules les équipes autorisées pourront créer des APIs",
   "APIs creation permission": "Autorisation de création d'APIs",
   "apisCreationPermission.help": "Si la sécurité de création d'API est activée pour l'organisation, l'autorisation de création d'API est obligatoire pour créer des APIs",
@@ -1166,5 +1166,15 @@
   "Default mail template": "Modèle de courriel par défaut",
   "Translate": "Traduire",
   "Insert URL": "Insérer l'URL",
-  "custom.metadata.process.change.to.manual": "L'ajout de metadonnée personnalisée a été modifié le process de souscription en manuel"
+  "custom.metadata.process.change.to.manual": "L'ajout de metadonnée personnalisée a été modifié le process de souscription en manuel",
+  "subscription security": "Sécurité - souscription",
+  "subscription.security.help": "Si activé, les équipe personnelle ne seront plus authorisée à souscrire à une API",
+  "API reference visibility": "Sécurité - visibilité du swagger",
+  "api.reference.visibility.help": "Si activé, les utilisateurs non connectés ne pourront pas voir le swagger sur les API publique",
+  "Hide teams page": "Disponibilité de la page des équipes",
+  "hide.teams.page.help": "Si activé, les chemin /teams ne sera plus accessible",
+  "General": "General",
+  "Customization": "Personnalisation",
+  "Mail": "Courriel",
+  "alerting.help": "Liste des courriels qui recevront les alertes Daikoku"
 }
