--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -368,7 +368,7 @@
     "delete.api.confirm": "Are you sure you want to delete this API?",
     "deletion successful": "deletion successful",
     "No API": "No API",
-    "View this Api": "View this Api",
+    "View this Api": "View this API",
     "Delete this Api": "Delete this API",
     "New api": "New API",
     "Informations": "Informations",
