--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1186,5 +1186,7 @@
   "doc.page.move.successfull": "La page a été déplacée avec succès",
   "doc.page.deletion.successfull": "La page a été supprimée avec succès",
   "doc.page.move.error": "Cette page ne peut être déplacée",
-  "doc.page.error.unknown": "Erreur inconnue"
+  "doc.page.error.unknown": "Erreur inconnue",
+  "otoroshi.list.add.label": "Ajouter une instance Otoroshi",
+  "Global stats": "Statistiques"
 }
