--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1186,5 +1186,6 @@
     "doc.page.move.error": "You can't move this documentation",
     "doc.page.error.unknown": "unknown error",
     "otoroshi.list.add.label": "Add an Otoroshi instance",
-    "Global stats": "Global stats"
+    "Global stats": "Global stats",
+    "apikeys visibility": "API keys visibility"
 }
