--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -109,6 +109,7 @@
   "Reject": "Rejeter",
   "from": "depuis",
   "notif.api.subscription": "Souscription à %s pour le plan %s",
+  "notif.api.demand.reject": "Votre souscription à %s pour le plan %s a été refusée",
   "notif.api.access": "demande d'accès à %s",
   "notif.membership.team": "Demande d'adhésion a votre équipe",
   "notif.apikey.deletion": "Votre clé d'API avec l'identifiant client %s pour API %s a été supprimée",
