--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -106,6 +106,7 @@
     "Reject": "Reject",
     "from": "from",
     "notif.api.subscription": "Request subscription to %s for plan %s",
+    "notif.api.demand.reject": "Your request subscription to %s for plan %s has been rejected",
     "notif.api.access": "Request access to %s",
     "notif.membership.team": "membership request to your team",
     "notif.apikey.deletion": "Your API key with clientId %s for API %s has been deleted",
