--- a/manual/src/main/paradox/tenantusage/1.5-initialize.md
+++ b/manual/src/main/paradox/tenantusage/1.5-initialize.md
@@ -20,7 +20,7 @@ You have to choose a team to admin the crated API. If the team doesn't exist, yo
 Your action is just, for the moment, to tack the api to create, the creation will be effective later.  
 _notice: Every choice you make are saved on your local storage in case of problem._
 
-## [Services] Recap and creation
+## Services - Recap and creation
 
 The next screen list all API to create. If your agree with this, you can click on the `create` button to launch the APIs creation.
 
@@ -32,7 +32,7 @@ If the team doesn't exist, you can create a team in this screen.
 Your action is just, for the moment, to stack the API key to create, the creation will be effective later.  
 _notice: Every choice you make are saved on your local storage in case of problem._
 
-## [Subscriptions] Recap and creation
+## Subscriptions - Recap and creation
 
 The next screen list all subscriptions to create. If your agree with this, you can click on the create button to launch the subscriptios creation.
 
