--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1199,5 +1199,12 @@
   "Monthly quotas consumed": "Quotas mensuels consommés",
   "daily.quotas.consumed.title": "%s appels quotidiens consommés sur %s",
   "monthly.quotas.consumed.title": "%s appels mensuels consommés sur %s",
-  "Quotas consumptions": "Consommation des quotas"
+  "Quotas consumptions": "Consommation des quotas",
+  "Event.details.modal.title": "Détail de l'évènement",
+  "modal.session.expire.title": "Votre session est expirée",
+  "Confirm": "Confirmation",
+  "Ok": "Ok",
+  "page.prompt.creation.message": "Indiquez le nom de la nouvelle page",
+  "page.prompt.creation.title": "Création d'une nouvelle page",
+  "page.prompt.creation.placeholder": "Nouvelle page"
 }
