--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1205,10 +1205,12 @@
     "page.prompt.creation.message": "Specify the name of the new page",
     "page.prompt.creation.title": "New page creation",
     "page.prompt.creation.placeholder": "New page",
-    "expertMode.access": "Access to the expert mode",
-    "expertMode.title.page": "%s - Expert Mode",
+    "expertMode.access": "Access to the fast mode",
+    "expertMode.title": "Fast Mode",
+    "expertMode.title.page": "%s - Fast Mode",
     "expertMode.title.chooseTeam": "Choose a team to start",
     "expertMode.error.searching.team": "An error has occurred while searching your teams",
     "expertMode.input.reasonSubscription": "Put the reason why you want an API key",
+    "expertMode.input.research.api": "Search your API...",
     "expertMode.subscription.resume": "summary of your subscription request"
 }
