--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1205,14 +1205,14 @@
     "page.prompt.creation.message": "Specify the name of the new page",
     "page.prompt.creation.title": "New page creation",
     "page.prompt.creation.placeholder": "New page",
-    "expertMode.access": "Access to the fast mode",
-    "expertMode.title": "Fast Mode",
-    "expertMode.title.page": "%s - Fast Mode",
-    "expertMode.title.chooseTeam": "Choose a team to start",
-    "expertMode.error.searching.team": "An error has occurred while searching your teams",
-    "expertMode.input.reasonSubscription": "Put the reason why you want an API key",
-    "expertMode.input.research.api": "Search your API...",
-    "expertMode.subscription.resume": "summary of your subscription request",
-    "expertMode.show.information": "Click on a plan or on a button \"see the API key\" for see more details\n",
-    "expertMode.apiKey.title": "API Key :"
+    "fastMode.access": "Access to the fast mode",
+    "fastMode.title": "Fast Mode",
+    "fastMode.title.page": "%s - Fast Mode",
+    "fastMode.title.chooseTeam": "Choose a team to start",
+    "fastMode.error.searching.team": "An error has occurred while searching your teams",
+    "fastMode.input.reasonSubscription": "Put the reason why you want an API key",
+    "fastMode.input.research.api": "Search your API...",
+    "fastMode.subscription.resume": "summary of your subscription request",
+    "fastMode.show.information": "Click on a plan or on a button \"see the API key\" for see more details\n",
+    "fastMode.apiKey.title": "API Key :"
 }
