--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1207,14 +1207,14 @@
   "page.prompt.creation.message": "Indiquez le nom de la nouvelle page",
   "page.prompt.creation.title": "Création d'une nouvelle page",
   "page.prompt.creation.placeholder": "Nouvelle page",
-  "expertMode.access": "Accéder au mode rapide",
-  "expertMode.title": "Mode rapide",
-  "expertMode.title.page": "%s - Mode rapide",
-  "expertMode.title.chooseTeam": "Choisir une team pour commencer",
-  "expertMode.error.searching.team": "Une erreur s'est produite lors de la recherche de vos équipes",
-  "expertMode.input.reasonSubscription":"Mettez la raison de votre demande de clé d'API",
-  "expertMode.input.research.api": "Chercher votre API...",
-  "expertMode.subscription.resume": "résumé de votre demande de souscription",
-  "expertMode.show.information": "Cliquez sur un plan ou sur un des boutons \"voir la clé d'API\" pour plus d'informations",
-  "expertMode.apiKey.title": "Clé d'API :"
+  "fastMode.access": "Accéder au mode rapide",
+  "fastMode.title": "Mode rapide",
+  "fastMode.title.page": "%s - Mode rapide",
+  "fastMode.title.chooseTeam": "Choisir une team pour commencer",
+  "fastMode.error.searching.team": "Une erreur s'est produite lors de la recherche de vos équipes",
+  "fastMode.input.reasonSubscription":"Mettez la raison de votre demande de clé d'API",
+  "fastMode.input.research.api": "Chercher votre API...",
+  "fastMode.subscription.resume": "résumé de votre demande de souscription",
+  "fastMode.show.information": "Cliquez sur un plan ou sur un des boutons \"voir la clé d'API\" pour plus d'informations",
+  "fastMode.apiKey.title": "Clé d'API :"
 }
