--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1233,5 +1233,6 @@
   "set.css": "un fichier CSS",
   "set.js": "un fichier JS",
   "set.favicon": "le favicon",
-  "set.font.family": "la police de style"
+  "set.font.family": "la police de style",
+  "select.team.placeholder": "Selectionner une équipe"
 }
