Rewrite part of UI

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1211,15 +1211,18 @@
     "fastMode.title.page": "%s - Fast Mode",
     "fastMode.title.chooseTeam": "Choose a team to start",
     "fastMode.error.searching.team": "An error has occurred while searching your teams",
-    "fastMode.input.reasonSubscription": "Put the reason why you want an API key",
+    "fastMode.input.reasonSubscription": "Fill with the default reason for your API subscription request",
     "fastMode.input.research.api": "Search your API...",
     "fastMode.input.research.plan": "Search your plan...",
     "fastMode.subscription.resume": "summary of your subscription request",
-    "fastMode.show.information": "Click on a plan or on a button \"see the API key\" for see more details\n",
-    "fastMode.apiKey.title": "API Key :",
-    "fastMode.reasonSubscription.title": "Reason for subscription",
+    "fastMode.show.information": "no plan or API Key selected",
+    "fastMode.reasonSubscription.title": "Default message",
     "fastMode.button.seeApiKey": "See the api key",
     "fastMode.button.pending": "Pending",
+    "fastMode.button.show.subs.apis": "Show all subscribed APIs",
+    "fastMode.button.show.all.apis": "Show all APIs",
+    "fastMode.selected.team.title": "Selected team",
+    "fastMode.token.label": "Token",
     "Yes": "Yes",
     "Filter": "Filter",
     "Filter data": "Filter data",
