--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1213,15 +1213,18 @@
   "fastMode.title.page": "%s - Mode rapide",
   "fastMode.title.chooseTeam": "Choisir une team pour commencer",
   "fastMode.error.searching.team": "Une erreur s'est produite lors de la recherche de vos équipes",
-  "fastMode.input.reasonSubscription":"Mettez la raison de votre demande de clé d'API",
+  "fastMode.input.reasonSubscription":"Renseigner le motif par défaut de votre demande de souscription",
   "fastMode.input.research.api": "Chercher votre API...",
   "fastMode.input.research.plan": "Chercher votre plan...",
   "fastMode.subscription.resume": "résumé de votre demande de souscription",
-  "fastMode.show.information": "Cliquez sur un plan ou sur un des boutons \"voir la clé d'API\" pour plus d'informations",
-  "fastMode.apiKey.title": "Clé d'API :",
-  "fastMode.reasonSubscription.title": "La raison de votre souscription",
+  "fastMode.show.information": "Aucun plan ou clé d'API selectionné",
+  "fastMode.reasonSubscription.title": "Message par défaut",
   "fastMode.button.seeApiKey": "Voir la clé d'API",
   "fastMode.button.pending": "En attente",
+  "fastMode.button.show.subs.apis": "Voir les APIs souscrites",
+  "fastMode.button.show.all.apis": "Voir toutes les APIs",
+  "fastMode.selected.team.title": "Équipe sélectionée",
+  "fastMode.token.label": "Jeton",
   "Yes": "Oui",
   "Filter": "Filtrer",
   "Filter data": "Filtrer les données",
