Add explain text for fast mode

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1226,6 +1226,9 @@
     "fastMode.button.show.all.apis": "Show all APIs",
     "fastMode.selected.team.title": "Selected team",
     "fastMode.token.label": "Token",
+    "fastMode.help.text.1": "The fast mode gives you simplified access to all the APIs accessible by a team.",
+    "fastMode.help.text.2": "The information displayed is brief to facilitate API key retrieval.",
+    "fastMode.help.text.3": "To use this feature, first select your team.",
     "Yes": "Yes",
     "Filter": "Filter",
     "Filter data": "Filter data",
