--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1228,6 +1228,9 @@
   "fastMode.button.show.all.apis": "Voir toutes les APIs",
   "fastMode.selected.team.title": "Équipe sélectionée",
   "fastMode.token.label": "Jeton",
+  "fastMode.help.text.1": "Le mode rapide vous offre un accès simplifié à toutes les API accessible par une équipe.",
+  "fastMode.help.text.2": "Les informations affichées sont succinctes afin de faciliter la récupération de clé d'API.",
+  "fastMode.help.text.3": "Pour utiliser cette fonctionnalité, sélectionnez d'abord votre équipe.",
   "Yes": "Oui",
   "Filter": "Filtrer",
   "Filter data": "Filtrer les données",
