missing oto target + badge type APIKEY fixed

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1237,5 +1237,6 @@
     "JS": "JS",
     "set.favicon": "favicon",
     "set.font.family": "font family",
-    "select.team.placeholder": "Select a team"
+    "select.team.placeholder": "Select a team",
+    "otoroshi.missing.target":"Missing otoroshi target"
 }
