--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1241,5 +1241,6 @@
     "set.favicon": "favicon",
     "set.font.family": "font family",
     "select.team.placeholder": "Select a team",
-    "otoroshi.missing.target":"Missing otoroshi target"
+    "otoroshi.missing.target":"Missing otoroshi target",
+    "otoroshi.missing.entities":"Missing otoroshi entities"
 }
